--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -117,6 +117,7 @@
     <string name="download_section_30d">30日以内</string>
     <string name="download_section_older">30日以上前</string>
     <string name="download_details_not_found">パッケージ名\"%s\"のモジュールはレポジトリに存在しません。</string>
+    <string name="download_no_versions">リリースタイプ設定に一致するモジュールがありません(もしくは制作者がまだモジュールを公開していません)</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">インストール</string>
@@ -127,7 +128,7 @@
     <string name="settings_group_download">ダウンロード</string>
     <string name="settings_enable_downloads">ダウンロードを有効化</string>
     <string name="settings_enable_downloads_summary">Xposedインストーラやモジュールの更新を定期的に確認するようにします。</string>
-    <string name="settings_release_type">表示するバージョン</string>
+    <string name="settings_release_type">表示するリリースタイプ</string>
     <string name="settings_group_experimental">実験的</string>
     <string name="settings_disable_resources">リソースフックを無効化</string>
     <string name="settings_disable_resources_summary">テーマエンジンとの競合を解消します。\n<b>警告:</b>このオプションを有効化するとリソースをフックするモジュールが動作しなくなります。</string>
