--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,6 +71,9 @@
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
+    <string name="module_is_not_activated_yet_detailed">%s has been installed, but is not activated yet.</string>
+    <string name="activate_and_reboot">Activate and reboot</string>
+    <string name="module_activated">Xposed module has been activated</string>
     <string name="module_empty_description">(no description provided)</string>
     <string name="module_no_ui">This module does not provide a user interface</string>
     <string name="no_xposed_modules_found">No Xposed modules were found!</string>
