--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -72,6 +72,8 @@
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
+    <string name="module_activated">Xposed module activated</string>
+    <string name="module_activated_failed">Xposed module couldn\'t be activated</string>
     <string name="module_empty_description">(no description provided)</string>
     <string name="module_no_ui">This module does not provide a user interface</string>
     <string name="no_xposed_modules_found">No Xposed modules were found!</string>
