--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -70,6 +70,9 @@
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposedモジュールがまだ有効にされていません</string>
+    <string name="module_is_not_activated_yet_detailed">%sがインストールされましたが有効にされていません。</string>
+    <string name="activate_and_reboot">有効にして再起動</string>
+    <string name="module_activated">Xposedモジュールを有効にしました。</string>
     <string name="module_empty_description">(説明なし)</string>
     <string name="module_no_ui">このモジュールにはUIがありません</string>
     <string name="no_xposed_modules_found">Xposedモジュールが見つかりません!</string>
@@ -117,7 +120,8 @@
     <string name="download_section_30d">30日以内</string>
     <string name="download_section_older">30日以上前</string>
     <string name="download_details_not_found">パッケージ名\"%s\"のモジュールはレポジトリに存在しません。</string>
-    <string name="download_no_versions">リリースタイプ設定に一致するモジュールがありません(もしくは制作者がまだモジュールを公開していません)</string>
+    <string name="download_no_versions">制作者がまだモジュールを公開していません。</string>
+    <string name="download_test_version_not_shown">テストバージョンがありますが、優先設定やモジュール別設定のため表示されません。</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">インストール</string>
