Changed some translations

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -7,7 +7,7 @@
     <string name="xposed_not_active">最新版のXposedが動作していません。フレームワークをインストールして再起動しましたか?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome"><b>Xposedインストーラ</b>にようこそ"!\nしたいことを選んでください:"</string>
+    <string name="welcome"><b>Xposed Installer</b>にようこそ"!\nしたいことを選んでください:"</string>
     <string name="tabInstall">フレームワーク</string>
     <string name="tabInstallDescription">モジュールの動作に必要なXposedフレームワークの管理をします。</string>
     <string name="tabModules">モジュール</string>
@@ -17,7 +17,7 @@
     <string name="welcome_framework_update_available">Xposedフレームワークの更新があります。 (%s)</string>
     <string name="welcome_update_available">モジュールの更新があります。</string>
     <string name="tabSettings">設定</string>
-    <string name="tabSettingsDescription">Xposedインストーラとフレームワークの設定をします。</string>
+    <string name="tabSettingsDescription">Xposed Installerとフレームワークの設定をします。</string>
     <string name="tabLogs">ログ</string>
     <string name="tabLogsDescription">Xposedフレームワークのログの表示、保存や送信をします。</string>
     <string name="tabAbout">このアプリについて</string>
@@ -40,9 +40,9 @@
     <string name="reboot_confirmation">再起動しますか?</string>
     <string name="reboot_recovery_confirmation">リカバリへ再起動しますか?</string>
     <string name="install_warning_title">注意!</string>
-    <string name="install_warning">Xposedをインストールした後起動しなくなる場合があります。\n\n \"仮文鎮\"や\"ブートループ\"になったことがない場合やその状態からの復旧方法を知らない場合、Xposedをインストール<b>しないでください</b>!\n\nどんな場合でもバックアップしておくことは大切です。</string>
+    <string name="install_warning">Xposedをインストールした後起動しなくなる場合があります。\n\n \"仮文鎮\"や\"ブートループ\"を知らない場合やその状態からの復旧方法を理解していない場合、Xposedをインストール<b>しないでください</b>!\n\nどんな場合でもバックアップしておくことは大切です。</string>
     <string name="dont_show_again">二度と表示しない</string>
-    <string name="install_known_issue">お使いのROMには互換性の問題(\"%s\")があるようです。Xposedをインストールできない可能性があります。ここをタップすると詳細を表示します。</string>
+    <string name="install_known_issue">お使いのROMには互換性の問題(\"%s\")があるようです。Xposedをインストールしても動作しなかったり重大な問題が起きる可能性があります。ここをタップすると詳細を表示します。</string>
 
     <!-- File operations -->
     <string name="root_failed">rootアクセスの取得に失敗しました。\n\n端末がrootedか、シェルコマンドをブロックしていないか確認してください。</string>
@@ -131,7 +131,7 @@
     <string name="install_mode_recovery_manual">リカバリ(zipをSDカードに書き込み手動でインストール)</string>
     <string name="settings_group_download">ダウンロード</string>
     <string name="settings_enable_downloads">ダウンロードを有効化</string>
-    <string name="settings_enable_downloads_summary">Xposedインストーラやモジュールの更新を定期的に確認するようにします。</string>
+    <string name="settings_enable_downloads_summary">Xposed Installerやモジュールの更新を定期的に確認するようにします。</string>
     <string name="settings_release_type">表示するリリースタイプ</string>
     <string name="settings_group_experimental">実験的</string>
     <string name="settings_disable_resources">リソースフックを無効化</string>
@@ -163,7 +163,7 @@
     <string name="about_version_label">アプリのバージョン:</string>
     <string name="about_source_label">ソースコード:</string>
     <string name="about_support_label">サポート:</string>
-    <string name="about_support_warning">インストーラとフレームワーク<b>専用</b>のサポートページです! モジュールの問題は<b>ここを使わずに</b>モジュールの制作者に連絡してください。</string>
+    <string name="about_support_warning">Xposed Installerとフレームワーク<b>専用</b>のサポートページです! モジュールの問題は<b>ここを使わずに</b>モジュールの制作者に連絡してください。</string>
     <string name="about_libraries_label">使用ライブラリ:</string>
 
     <!-- DownloadView -->
