--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -46,6 +46,7 @@
     <string name="install_reverted">app_processバージョン\"%1$s\"をインストールしましたが、バージョン\"%2$s\"が見つかりました。古いファイルが復元されるのを防ぐにはリカバリ(自動か手動)からインストールしてください。</string>
     <string name="uninstall_reverted">app_processをアンインストールしましたが、バージョン\"%s\"が見つかりました。古いファイルが復元されるのを防ぐにはリカバリ(自動か手動)からアンインストールしてください。</string>
      <string name="tap_to_dismiss">タップで無視</string>
+     <string name="sdcard_location">SDカード: %s</string>
 
     <!-- File operations -->
     <string name="root_failed">rootアクセスの取得に失敗しました。\n\n端末がrootedか、シェルコマンドをブロックしていないか確認してください。</string>
