--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -44,6 +44,10 @@
     <string name="install_warning">В некоторых случаях, устройство не может загрузиться после установки Xposed.\n\nЕсли Вы раньше никогда не слышали о \"превращении в кирпич\" и \"зацикливании\", или если Вы не знаете, как решать подобные ситуации,<b>НЕ</b> устанавливайте Xposed!\n\nВ любом случае, всегда рекомендуется иметь свежую резервную копию.</string>
     <string name="dont_show_again">Больше не показывать</string>
     <string name="install_known_issue">Похоже, присутствует известная несовместимость (\"%s\") с Вашей прошивкой. Пожалуй, Вам не стоит устанавливать Xposed. Нажмите здесь для дополнительной информации.</string>
+    <string name="install_reverted">Ранее была установлена версия app_process \"%1$s\", но сейчас обнаружена версия \"%2$s\". Если Вы не хотели, чтобы был восстановлен старый файл, можете попробовать установку через режим восстановления (автоматически или вручную).</string>
+    <string name="uninstall_reverted">Ранее app_process был удалён, но сейчас обнаружена версия \"%s\". Если Вы не хотели, чтобы был восстановлен старый файл, можете попробовать удаление через режим восстановления (автоматически или вручную).</string>
+    <string name="tap_to_dismiss">Нажмите для пропуска</string>
+    <string name="sdcard_location">SD-карта: %s</string>
 
     <!-- File operations -->
     <string name="root_failed">Сбой получения прав рут-доступа.\n\nУбедитесь, что на устройстве есть рут и команды оболочки не блокируются.</string>
