--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -126,7 +126,7 @@
     <string name="download_section_older">Pred viac ako 30 dňami</string>
     <string name="download_details_not_found">Nebol nájdený žiadny modul s názvom balíka \"%s\" v repozitári.</string>
     <string name="download_no_versions">Autor zatiaľ nič nenahral.</string>
-    <string name="download_test_version_not_shown">Skúšobná verzia je k dispozícii, ale nie je zobrazená z dôvodu vašich globálnych nastavení alebo špecifických nastavení modulu.</string>
+    <string name="download_test_version_not_shown">Skúšobná verzia je k dispozícii, ale nie je zobrazená z dôvodu vašich globálnych nastavení alebo z dôvodu špecifických nastavení modulu.</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">Inštalácia</string>
