--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -45,7 +45,7 @@
     <string name="dont_show_again">Nicht wieder anzeigen</string>
     <string name="install_known_issue">Es scheint eine bekannte Inkompatibilität (\"%s\") mit deinem ROM zu geben. Du solltest Xposed wahrscheinlich nicht installieren. Klicke hier für mehr Informationen.</string>
     <string name="install_reverted">Version \"%1$s\" von app_process war zuvor installiert, aber jetzt wurde Version \"%2$s\" gefunden. Wenn du nicht erwartet hast, dass eine alte Datei wiederhergestellt wird, könntest du die Installation per Recovery (automatisch oder manuell) versuchen.</string>
-    <string name="uninstall_reverted">Version \"%1$s\" von app_process wurde zuvor deinstalliert, aber jetzt wurde Version \"%2$s\" gefunden. Wenn du nicht erwartet hast, dass eine alte Datei wiederhergestellt wird, könntest du die Deinstallation per Recovery (automatisch oder manuell) versuchen.</string>
+    <string name="uninstall_reverted">app_process wurde zuvor deinstalliert, aber jetzt wurde Version \"%s\" gefunden. Wenn du nicht erwartet hast, dass eine alte Datei wiederhergestellt wird, könntest du die Deinstallation per Recovery (automatisch oder manuell) versuchen.</string>
     <string name="tap_to_dismiss">Antippen zum Ausblenden</string>
     <string name="sdcard_location">SD-Karte: %s</string>
 
